@startuml 

class ConferenceManager {
  + getSubmissions(conf: Conference): List<Article>
  + setArticleStatus(article: Article, status: String)
  + registerUser(nome: String, cognome: String, email: String, password: String, affiliazione: String, ruolo: String): void
  + login(email: String, password: String): void
}

abstract class User {
    - id: int
    - name: String
    - lastName: String
    - email: String
    - Affiliazione: String
    # User(aff: String, email: String, lastName: String, name: String, password: String, id: String);
    # User(u: User)
    + getName(): String
    + getLastName(): String
    + getEmail(): String
    + getId(): int
    + getAffiliazione(): String
    + setAffiliazione(aff: String): void
    + setEmail(email: String): void
  }
  
  class Author {
    - final role: String
    + Author(aff: String, email: String, lastName: String, name: String, password: String, id: String)
    + Author(a: Author)		
    + getRole(): String
    + submitArticle(article: Article, conf: Conference)
  }

  class Organizer {
    - final role: String
    + Organizer(aff: String, email: String, lastName: String, name: String, password: String, id: String)
    + Organizer(o: Organizer)
    + getRole(): String
    + assignReviewer(reviewer: Author, article: Article)
  }

  class Article {
    - title: String
    - abstract: String
    - status: String
    - coAuthors: List<Author>
    + Article(id: String, abstract: String, coAuthors: List<Author>, title: String)
	+ Article(a: Article)
	+ updateReview(rev: Review)
  }
  
  class Conference {
    - title: String
    - description: String
    - deadline: Date
    - articles: List<Article>
    + Conference(deadline: Date, title: String, description: String, id: String)
    + Conference(conf: Conference)
    + getTitle(): String
    + getDescription(): String
    + getDeadline(): Date
    + getArticles(): List<Article>
  }

class Review {
	- Id: ID
	- Article: Article
	- Reviewer: Author
	- Punteggio: int
	- Esito: String
	+ Review(article: Article, reviewer: Author)
}

  User <|-- Author
Organizer --|> User


Organizer "1" -- "1" ConferenceManager : Manages
ConferenceManager "1" -- "0..*" Conference : Conosce
ConferenceManager "1" -- "0..*" Article : Conosce
ConferenceManager "1" -- "0..*" Author : Conosce
ConferenceManager "1" -- "1..*" Review : Assegna

' Relazioni
Organizer "1" -left- "0..*" Conference: Gestisce
Article "0..*" -- "1..*" Conference : Sottomesso a
Article "1" -- "1..4" Author : Scritto da
Author "1" -- "0..*" Review: Aggiorna

' Revisori: relazione molti-a-molti tra Autore e Articolo
Author "0..*" -- "3" Article : revisore di

@enduml
